--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
+    "expo-constants": "^14.4.2",
     "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
